--- a/index.html
+++ b/index.html
@@ -1,122 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Victor Ogbeide - Graphic Designer</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fff;
-      color: #333;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Victor Ogbeide - Graphic Designer</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <style>
+        /* General Styling */
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #f1f1f1;
+            overflow-x: hidden;
+        }
 
-    header {
-      background-color: #FFD700;
-      color: #000;
-      padding: 60px 20px;
-      text-align: center;
-    }
+        h1, h2, h3 {
+            color: #f1f1f1;
+        }
 
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-    }
+        a {
+            text-decoration: none;
+            color: #f1f1f1;
+        }
 
-    header p {
-      font-size: 1.2rem;
-    }
+        a:hover {
+            color: #ffcc00; /* Yellow on hover */
+        }
 
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
+        /* Navigation Bar */
+        header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 10px;
+            z-index: 10;
+        }
 
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-      color: #FFD700;
-    }
+        nav ul {
+            display: flex;
+            justify-content: center;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
 
-    .portfolio-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
+        nav ul li {
+            margin: 0 20px;
+        }
 
-    .portfolio-grid img {
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
+        nav ul li a {
+            font-size: 18px;
+            font-weight: 600;
+        }
 
-    .course-section, .hire-section {
-      text-align: center;
-    }
+        /* Home Section */
+        #home {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+            background: url('background.jpg') no-repeat center center/cover;
+        }
 
-    .btn {
-      display: inline-block;
-      background-color: #FFD700;
-      color: #000;
-      padding: 12px 24px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
+        #home h1 {
+            font-size: 3rem;
+        }
 
-    .btn:hover {
-      background-color: #e6c200;
-    }
+        .cta-button {
+            background-color: #ffcc00;
+            padding: 10px 20px;
+            color: #121212;
+            font-weight: 600;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
 
-    footer {
-      background-color: #111;
-      color: #fff;
-      text-align: center;
-      padding: 30px 20px;
-      font-size: 0.9rem;
-    }
-  </style>
+        .cta-button:hover {
+            background-color: #e6b800;
+        }
+
+        /* Portfolio Section */
+        #portfolio {
+            padding: 50px 20px;
+            background-color: #1a1a1a;
+            text-align: center;
+        }
+
+        .portfolio-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+
+        .portfolio-item {
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .portfolio-item img {
+            width: 100%;
+            height: auto;
+        }
+
+        .portfolio-item p {
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
+            font-weight: 600;
+        }
+
+        /* Photoshop Course Section */
+        #course {
+            padding: 50px 20px;
+            background: rgba(0, 0, 0, 0.7);
+            text-align: center;
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            margin: 50px auto;
+            width: 80%;
+        }
+
+        #course h2 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+            color: #ffcc00;
+        }
+
+        #course p {
+            font-size: 1rem;
+            color: #fff;
+        }
+
+        /* Contact Section */
+        #contact {
+            padding: 50px 20px;
+            background-color: #1a1a1a;
+            text-align: center;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .social-links a {
+            color: #ffcc00;
+            font-size: 1.2rem;
+            font-weight: 600;
+            transition: 0.3s;
+        }
+
+        .social-links a:hover {
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
 
-  <!-- HERO -->
-  <header>
-    <h1>Victor Ogbeide</h1>
-    <p>Creative Graphic Designer | Visual Storyteller</p>
-  </header>
+    <!-- Navigation Bar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#course">Photoshop Course</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- PORTFOLIO -->
-  <section id="portfolio">
-    <h2>My Work</h2>
-    <div class="portfolio-grid">
-      <img src="https://via.placeholder.com/300x200.png?text=Flyer+Design+1" alt="Work 1">
-      <img src="https://via.placeholder.com/300x200.png?text=Poster+Design+2" alt="Work 2">
-      <img src="https://via.placeholder.com/300x200.png?text=Logo+Design+3" alt="Work 3">
-    </div>
-  </section>
+    <!-- Home Section -->
+    <section id="home">
+        <div>
+            <h1>Welcome to My Portfolio</h1>
+            <p>I am Victor Ogbeide, a passionate graphic designer.</p>
+            <a href="#portfolio" class="cta-button">View My Work</a>
+        </div>
+    </section>
 
-  <!-- COURSE -->
-  <section id="course" class="course-section">
-    <h2>My Course</h2>
-    <p>Want to design stunning flyers using just your phone? Join my course now and level up your design game!</p>
-    <a href="https://wa.me/234XXXXXXXXXX" class="btn" target="_blank">Join via WhatsApp</a>
-  </section>
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <h2>My Portfolio</h2>
+        <div class="portfolio-gallery">
+            <div class="portfolio-item">
+                <img src="https://github.com/yourusername/repository-name/raw/main/design1.jpg" alt="Design 1">
+                <p>Design Description</p>
+            </div>
+            <div class="portfolio-item">
+                <img src="https://github.com/yourusername/repository-name/raw/main/design2.jpg" alt="Design 2">
+                <p>Design Description</p>
+            </div>
+            <!-- Add more items as necessary -->
+        </div>
+    </section>
 
-  <!-- HIRE -->
-  <section id="hire" class="hire-section">
-    <h2>Hire Me</h2>
-    <p>Need eye-catching designs for your brand, event, or business? Let’s work together!</p>
-    <a href="mailto:victor@example.com" class="btn">Contact Me</a>
-  </section>
+    <!-- Photoshop Course Section -->
+    <section id="course">
+        <h2>Photoshop Course - Coming Soon</h2>
+        <p>Get ready to level up your design skills with my upcoming Photoshop course!</p>
+        <a href="https://wa.me/message/7U4T2N47JMNOL1" class="cta-button">Join the Waitlist</a>
+    </section>
 
-  <!-- FOOTER -->
-  <footer>
-    &copy; 2025 Victor Ogbeide. All Rights Reserved.
-  </footer>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out to me via phone or social media!</p>
+        <p>Phone: <a href="tel:+2349027615650">+234 9027615650</a></p>
+        <p>WhatsApp: <a href="https://wa.me/message/7U4T2N47JMNOL1">Click to Chat</a></p>
+        <div class="social-links">
+            <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09" target="_blank">X</a>
+            <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL" target="_blank">Facebook</a>
+        </div>
+    </section>
 
 </body>
 </html>
