--- a/index.html
+++ b/index.html
@@ -3,225 +3,217 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor Ogbeide - Graphic Designer</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <title>Victor Ogbeide - Graphic Design Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        /* General Styling */
-        body {
-            font-family: 'Poppins', sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+        body {
             background-color: #121212;
-            color: #f1f1f1;
+            color: white;
+            display: flex;
+            min-height: 100vh;
             overflow-x: hidden;
         }
-
-        h1, h2, h3 {
-            color: #f1f1f1;
-        }
-
-        a {
-            text-decoration: none;
-            color: #f1f1f1;
-        }
-
-        a:hover {
-            color: #ffcc00; /* Yellow on hover */
-        }
-
-        /* Navigation Bar */
-        header {
+        /* Sidebar */
+        .sidebar {
+            width: 250px;
+            background-color: #2c2c2c;
             position: fixed;
             top: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            z-index: 10;
+            left: 0;
+            height: 100vh;
+            padding: 20px;
         }
-
-        nav ul {
-            display: flex;
-            justify-content: center;
-            list-style-type: none;
-            margin: 0;
+        .sidebar h2 {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+        .sidebar ul {
+            list-style: none;
             padding: 0;
         }
-
-        nav ul li {
-            margin: 0 20px;
+        .sidebar ul li {
+            margin: 20px 0;
         }
-
-        nav ul li a {
-            font-size: 18px;
-            font-weight: 600;
-        }
-
-        /* Home Section */
-        #home {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
-            background: url('background.jpg') no-repeat center center/cover;
-        }
-
-        #home h1 {
-            font-size: 3rem;
-        }
-
-        .cta-button {
-            background-color: #ffcc00;
-            padding: 10px 20px;
-            color: #121212;
-            font-weight: 600;
-            border-radius: 5px;
+        .sidebar ul li a {
+            color: #f0e100;
+            font-size: 1.1rem;
+            text-decoration: none;
+            font-weight: 500;
             transition: 0.3s;
         }
-
-        .cta-button:hover {
-            background-color: #e6b800;
+        .sidebar ul li a:hover {
+            color: #fff;
+            text-decoration: underline;
         }
-
-        /* Portfolio Section */
-        #portfolio {
-            padding: 50px 20px;
-            background-color: #1a1a1a;
+        /* Main Content */
+        .main-content {
+            margin-left: 250px;
+            padding: 40px;
+            flex: 1;
+            background-color: #181818;
+        }
+        .header, .footer {
             text-align: center;
+            margin-bottom: 40px;
         }
-
-        .portfolio-gallery {
+        .header h1 {
+            font-size: 3rem;
+            font-weight: 700;
+            color: #f0e100;
+        }
+        .header p {
+            font-size: 1.2rem;
+            color: #d1d1d1;
+        }
+        /* Section */
+        section {
+            margin-bottom: 50px;
+        }
+        h2 {
+            font-size: 2rem;
+            font-weight: 600;
+            margin-bottom: 10px;
+            color: #f0e100;
+        }
+        p {
+            font-size: 1.1rem;
+            color: #d1d1d1;
+        }
+        .portfolio {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
             gap: 20px;
-            margin-top: 30px;
         }
-
         .portfolio-item {
-            background: rgba(0, 0, 0, 0.6);
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+            transition: 0.3s;
         }
-
+        .portfolio-item:hover {
+            transform: scale(1.05);
+        }
         .portfolio-item img {
             width: 100%;
-            height: auto;
+            border-radius: 8px;
         }
-
-        .portfolio-item p {
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            font-weight: 600;
+        /* Photoshop Course */
+        .course {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
         }
-
-        /* Photoshop Course Section */
-        #course {
-            padding: 50px 20px;
-            background: rgba(0, 0, 0, 0.7);
-            text-align: center;
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            margin: 50px auto;
-            width: 80%;
-        }
-
-        #course h2 {
+        .course h3 {
             font-size: 2rem;
-            margin-bottom: 20px;
-            color: #ffcc00;
-        }
-
-        #course p {
-            font-size: 1rem;
-            color: #fff;
-        }
-
-        /* Contact Section */
-        #contact {
-            padding: 50px 20px;
-            background-color: #1a1a1a;
-            text-align: center;
-        }
-
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .social-links a {
-            color: #ffcc00;
-            font-size: 1.2rem;
             font-weight: 600;
+            color: #f0e100;
+            margin-bottom: 15px;
+        }
+        .course p {
+            font-size: 1.1rem;
+            color: #d1d1d1;
+            margin-bottom: 20px;
+        }
+        /* Glassmorphism */
+        .glass {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+        /* Social Media Links */
+        .social-links a {
+            color: #f0e100;
+            font-size: 1.5rem;
+            margin: 0 10px;
             transition: 0.3s;
         }
-
         .social-links a:hover {
             color: #fff;
+        }
+        /* Media Queries */
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 200px;
+            }
+            .main-content {
+                margin-left: 200px;
+            }
         }
     </style>
 </head>
 <body>
 
-    <!-- Navigation Bar -->
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#course">Photoshop Course</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="sidebar">
+        <h2>Victor Ogbeide</h2>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#course">Photoshop Course</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
 
-    <!-- Home Section -->
-    <section id="home">
-        <div>
-            <h1>Welcome to My Portfolio</h1>
-            <p>I am Victor Ogbeide, a passionate graphic designer.</p>
-            <a href="#portfolio" class="cta-button">View My Work</a>
-        </div>
-    </section>
-
-    <!-- Portfolio Section -->
-    <section id="portfolio">
-        <h2>My Portfolio</h2>
-        <div class="portfolio-gallery">
-            <div class="portfolio-item">
-                <img src="https://github.com/yourusername/repository-name/raw/main/design1.jpg" alt="Design 1">
-                <p>Design Description</p>
+    <div class="main-content">
+        <!-- Home Section -->
+        <section id="home" class="glass">
+            <div class="header">
+                <h1>Welcome to My Graphic Design Portfolio</h1>
+                <p>Discover my work, courses, and how we can collaborate.</p>
             </div>
-            <div class="portfolio-item">
-                <img src="https://github.com/yourusername/repository-name/raw/main/design2.jpg" alt="Design 2">
-                <p>Design Description</p>
+        </section>
+
+        <!-- Portfolio Section -->
+        <section id="portfolio">
+            <h2>My Portfolio</h2>
+            <p>Check out my designs and creative work!</p>
+            <div class="portfolio">
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/300" alt="Portfolio Item 1">
+                    <p>Design 1</p>
+                </div>
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/300" alt="Portfolio Item 2">
+                    <p>Design 2</p>
+                </div>
+                <!-- Add more portfolio items as needed -->
             </div>
-            <!-- Add more items as necessary -->
-        </div>
-    </section>
+        </section>
 
-    <!-- Photoshop Course Section -->
-    <section id="course">
-        <h2>Photoshop Course - Coming Soon</h2>
-        <p>Get ready to level up your design skills with my upcoming Photoshop course!</p>
-        <a href="https://wa.me/message/7U4T2N47JMNOL1" class="cta-button">Join the Waitlist</a>
-    </section>
+        <!-- Photoshop Course Section -->
+        <section id="course" class="course glass">
+            <h3>Photoshop Mastery Course</h3>
+            <p>Learn the basics of Photoshop with easy-to-follow tutorials. Coming soon!</p>
+        </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Feel free to reach out to me via phone or social media!</p>
-        <p>Phone: <a href="tel:+2349027615650">+234 9027615650</a></p>
-        <p>WhatsApp: <a href="https://wa.me/message/7U4T2N47JMNOL1">Click to Chat</a></p>
-        <div class="social-links">
-            <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09" target="_blank">X</a>
-            <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt" target="_blank">Instagram</a>
-            <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL" target="_blank">Facebook</a>
+        <!-- Contact Section -->
+        <section id="contact" class="glass">
+            <h2>Contact Me</h2>
+            <p>Reach out to discuss projects, courses, or collaborations!</p>
+            <div class="social-links">
+                <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09">X</a>
+                <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt">Instagram</a>
+                <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL">Facebook</a>
+                <a href="https://wa.me/message/7U4T2N47JMNOL1">WhatsApp</a>
+            </div>
+            <p>Phone: +234 9027615650</p>
+        </section>
+
+        <!-- Footer Section -->
+        <div class="footer">
+            <p>&copy; 2025 Victor Ogbeide - All Rights Reserved</p>
         </div>
-    </section>
+    </div>
 
 </body>
 </html>
