--- a/index.html
+++ b/index.html
@@ -1,219 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Victor Ogbeide - Graphic Design Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-        body {
-            background-color: #121212;
-            color: white;
-            display: flex;
-            min-height: 100vh;
-            overflow-x: hidden;
-        }
-        /* Sidebar */
-        .sidebar {
-            width: 250px;
-            background-color: #2c2c2c;
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100vh;
-            padding: 20px;
-        }
-        .sidebar h2 {
-            font-size: 1.5rem;
-            font-weight: 600;
-            margin-bottom: 20px;
-        }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar ul li {
-            margin: 20px 0;
-        }
-        .sidebar ul li a {
-            color: #f0e100;
-            font-size: 1.1rem;
-            text-decoration: none;
-            font-weight: 500;
-            transition: 0.3s;
-        }
-        .sidebar ul li a:hover {
-            color: #fff;
-            text-decoration: underline;
-        }
-        /* Main Content */
-        .main-content {
-            margin-left: 250px;
-            padding: 40px;
-            flex: 1;
-            background-color: #181818;
-        }
-        .header, .footer {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-        .header h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            color: #f0e100;
-        }
-        .header p {
-            font-size: 1.2rem;
-            color: #d1d1d1;
-        }
-        /* Section */
-        section {
-            margin-bottom: 50px;
-        }
-        h2 {
-            font-size: 2rem;
-            font-weight: 600;
-            margin-bottom: 10px;
-            color: #f0e100;
-        }
-        p {
-            font-size: 1.1rem;
-            color: #d1d1d1;
-        }
-        .portfolio {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-        }
-        .portfolio-item {
-            background: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-        }
-        .portfolio-item:hover {
-            transform: scale(1.05);
-        }
-        .portfolio-item img {
-            width: 100%;
-            border-radius: 8px;
-        }
-        /* Photoshop Course */
-        .course {
-            background: rgba(255, 255, 255, 0.15);
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-        }
-        .course h3 {
-            font-size: 2rem;
-            font-weight: 600;
-            color: #f0e100;
-            margin-bottom: 15px;
-        }
-        .course p {
-            font-size: 1.1rem;
-            color: #d1d1d1;
-            margin-bottom: 20px;
-        }
-        /* Glassmorphism */
-        .glass {
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-        /* Social Media Links */
-        .social-links a {
-            color: #f0e100;
-            font-size: 1.5rem;
-            margin: 0 10px;
-            transition: 0.3s;
-        }
-        .social-links a:hover {
-            color: #fff;
-        }
-        /* Media Queries */
-        @media (max-width: 768px) {
-            .sidebar {
-                width: 200px;
-            }
-            .main-content {
-                margin-left: 200px;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Victor – Creative Designer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #0d0d0d;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      padding: 2rem;
+      text-align: center;
+      animation: fadeIn 1.2s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .profile-pic {
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 4px solid #FFD700;
+      box-shadow: 0 0 15px #ffd70070;
+      margin-bottom: 1.5rem;
+      transition: all 0.3s ease;
+    }
+
+    .profile-pic:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px #ffd700;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #FFD700;
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      font-size: 1.2rem;
+      color: #cccccc;
+      margin-bottom: 2rem;
+    }
+
+    .links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
+    }
+
+    .link-btn {
+      background-color: transparent;
+      border: 2px solid #FFD700;
+      color: #FFD700;
+      padding: 0.8rem 1.5rem;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .link-btn::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background-color: #FFD700;
+      transition: 0.3s ease-in-out;
+      z-index: 0;
+    }
+
+    .link-btn:hover::before {
+      left: 0;
+    }
+
+    .link-btn span {
+      position: relative;
+      z-index: 1;
+    }
+
+    .link-btn:hover {
+      color: #111111;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .link-btn {
+        padding: 0.7rem 1.2rem;
+      }
+    }
+  </style>
 </head>
 <body>
 
-    <div class="sidebar">
-        <h2>Victor Ogbeide</h2>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#course">Photoshop Course</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
+  <!-- 👑 Profile Picture -->
+  <img src="https://your-image-link.jpg" alt="Victor's Profile" class="profile-pic" />
 
-    <div class="main-content">
-        <!-- Home Section -->
-        <section id="home" class="glass">
-            <div class="header">
-                <h1>Welcome to My Graphic Design Portfolio</h1>
-                <p>Discover my work, courses, and how we can collaborate.</p>
-            </div>
-        </section>
+  <!-- 💬 Intro Text -->
+  <h1>Hi, I'm Victor</h1>
+  <p>A Creative Designer crafting visuals with purpose and style</p>
 
-        <!-- Portfolio Section -->
-        <section id="portfolio">
-            <h2>My Portfolio</h2>
-            <p>Check out my designs and creative work!</p>
-            <div class="portfolio">
-                <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300" alt="Portfolio Item 1">
-                    <p>Design 1</p>
-                </div>
-                <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/300" alt="Portfolio Item 2">
-                    <p>Design 2</p>
-                </div>
-                <!-- Add more portfolio items as needed -->
-            </div>
-        </section>
-
-        <!-- Photoshop Course Section -->
-        <section id="course" class="course glass">
-            <h3>Photoshop Mastery Course</h3>
-            <p>Learn the basics of Photoshop with easy-to-follow tutorials. Coming soon!</p>
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contact" class="glass">
-            <h2>Contact Me</h2>
-            <p>Reach out to discuss projects, courses, or collaborations!</p>
-            <div class="social-links">
-                <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09">X</a>
-                <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt">Instagram</a>
-                <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL">Facebook</a>
-                <a href="https://wa.me/message/7U4T2N47JMNOL1">WhatsApp</a>
-            </div>
-            <p>Phone: +234 9027615650</p>
-        </section>
-
-        <!-- Footer Section -->
-        <div class="footer">
-            <p>&copy; 2025 Victor Ogbeide - All Rights Reserved</p>
-        </div>
-    </div>
+  <!-- 🔗 Link Buttons -->
+  <div class="links">
+    <a href="#" class="link-btn"><span>Behance</span></a>
+    <a href="#" class="link-btn"><span>Instagram</span></a>
+    <a href="#" class="link-btn"><span>Twitter</span></a>
+    <a href="#" class="link-btn"><span>WhatsApp</span></a>
+    <a href="#" class="link-btn"><span>Email Me</span></a>
+  </div>
 
 </body>
 </html>
