Update3 index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
       padding: 2rem;
       text-align: center;
@@ -70,6 +70,7 @@
       flex-wrap: wrap;
       gap: 1rem;
       justify-content: center;
+      margin-bottom: 3rem;
     }
 
     .link-btn {
@@ -110,6 +111,27 @@
       color: #111111;
     }
 
+    .section {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background-color: #1a1a1a;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+    }
+
+    .section h2 {
+      font-size: 2rem;
+      color: #FFD700;
+      margin-bottom: 1rem;
+    }
+
+    .section p {
+      font-size: 1.1rem;
+      color: #cccccc;
+      line-height: 1.8;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 2rem;
@@ -124,7 +146,7 @@
 <body>
 
   <!-- 👑 Profile Picture -->
-  <img src="https://your-image-link.jpg" alt="Victor's Profile" class="profile-pic" />
+  <img src="https://drive.google.com/uc?export=view&id=1X1yH281CfiGKF0O_vA_ynjFdleCasddl" alt="Victor's Profile" class="profile-pic" />
 
   <!-- 💬 Intro Text -->
   <h1>Hi, I'm Victor</h1>
@@ -132,11 +154,37 @@
 
   <!-- 🔗 Link Buttons -->
   <div class="links">
-    <a href="#" class="link-btn"><span>Behance</span></a>
-    <a href="#" class="link-btn"><span>Instagram</span></a>
-    <a href="#" class="link-btn"><span>Twitter</span></a>
-    <a href="#" class="link-btn"><span>WhatsApp</span></a>
-    <a href="#" class="link-btn"><span>Email Me</span></a>
+    <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09" class="link-btn"><span>Twitter</span></a>
+    <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt" class="link-btn"><span>Instagram</span></a>
+    <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL" class="link-btn"><span>Facebook</span></a>
+    <a href="https://wa.me/message/7U4T2N47JMNOL1" class="link-btn"><span>WhatsApp</span></a>
+    <a href="mailto:thevictorogbeide@gmail.com" class="link-btn"><span>Email Me</span></a>
+  </div>
+
+  <!-- 👋 Welcoming Speech -->
+  <div class="section">
+    <h2>Welcome to My Creative World!</h2>
+    <p>
+      As a passionate designer, I aim to bring ideas to life through creative visuals that communicate meaning and evoke emotions. Whether it's graphic design, branding, or UI/UX, my mission is to create something that truly speaks to my audience. I'm constantly learning, growing, and pushing the limits of what’s possible in design. Let's make something amazing together!
+    </p>
+  </div>
+
+  <!-- 🖌️ About My Expertise -->
+  <div class="section">
+    <h2>My Expertise</h2>
+    <p>
+      I specialize in creating stunning visuals, logos, and branding identities that help businesses and individuals stand out. With experience in graphic design, motion design, and web design, I pride myself on delivering modern, sleek, and user-friendly designs that capture attention. From concept to execution, I work closely with clients to bring their visions to life.
+    </p>
+    <p>
+      Whether you’re launching a brand, need a flyer for an event, or require an animated logo, I’ve got you covered. My design process involves a blend of creativity, strategic thinking, and technical expertise to ensure every project is crafted to perfection.
+    </p>
+  </div>
+
+  <!-- 🌟 Testimonials Section (Optional) -->
+  <div class="section">
+    <h2>What My Clients Say</h2>
+    <p>"Victor helped us bring our brand vision to life with an incredible logo design and brand identity. His attention to detail and creativity is unmatched." – [Client Name]</p>
+    <p>"The team loved the motion graphics Victor created for our ad campaign. He made our product shine in ways we couldn't have imagined." – [Client Name]</p>
   </div>
 
 </body>
