--- a/index.html
+++ b/index.html
@@ -10,50 +10,44 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      scroll-behavior: smooth;
       font-family: 'Poppins', sans-serif;
+      scroll-behavior: smooth;
     }
 
     body {
       background-color: #0d0d0d;
       color: #f5f5f5;
-      overflow-x: hidden;
-      position: relative;
-    }
-
-    .bg-polygons {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-      overflow: hidden;
-      pointer-events: none;
-    }
-
-    .polygon {
-      position: absolute;
-      fill: #FFD70022;
-      animation: float 10s infinite linear;
-    }
-
-    @keyframes float {
-      from {
-        transform: translateY(100vh) rotate(0deg);
-      }
-      to {
-        transform: translateY(-100vh) rotate(360deg);
-      }
-    }
-
-    .container {
-      position: relative;
-      z-index: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 2rem;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    canvas#bg {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: -1;
+      opacity: 0.1;
+    }
+
+    .fade-in {
+      animation: fadeIn 1.4s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .profile-img {
@@ -63,21 +57,18 @@
       border: 3px solid #f1c40f;
       object-fit: cover;
       margin-bottom: 1rem;
-      animation: fadeIn 1.5s ease-out;
     }
 
     h1 {
       color: #f1c40f;
       font-size: 2rem;
       margin-bottom: 0.5rem;
-      animation: fadeIn 2s ease-out;
     }
 
     h2 {
       font-weight: 300;
       margin-bottom: 2rem;
       color: #aaa;
-      animation: fadeIn 2.5s ease-out;
     }
 
     .about {
@@ -85,7 +76,6 @@
       text-align: center;
       margin-bottom: 2rem;
       line-height: 1.6;
-      animation: fadeIn 3s ease-out;
     }
 
     .links {
@@ -94,7 +84,6 @@
       justify-content: center;
       gap: 1rem;
       margin-bottom: 2rem;
-      animation: fadeIn 3.5s ease-out;
     }
 
     .link-btn {
@@ -113,4 +102,107 @@
     }
 
     footer {
-      font-size: 0.9
+      font-size: 0.9rem;
+      color: #888;
+      margin-top: 2rem;
+    }
+  </style>
+</head>
+<body class="fade-in">
+
+  <!-- 🔷 Moving Background Canvas -->
+  <canvas id="bg"></canvas>
+
+  <!-- 👤 Profile & Intro -->
+  <img src="https://drive.google.com/uc?export=view&id=1X1yH281CfiGKF0O_vA_ynjFdleCasddl" alt="Victor's Profile" class="profile-img">
+
+  <h1>Victor Ogbeide</h1>
+  <h2>Designer Extraordinaire 💻🎨</h2>
+
+  <div class="about">
+    <p>
+      Welcome to my corner of the web! I'm Victor, a passionate designer who crafts visual experiences that speak louder than words. From branding to UI/UX and digital storytelling, I bring ideas to life with precision and creativity.
+    </p>
+    <br>
+    <p>
+      Whether it's social media graphics, motion designs, or sleek interface layouts — I'm your go-to guy to make your brand shine with meaning and beauty.
+    </p>
+  </div>
+
+  <!-- 🔗 Social Links -->
+  <div class="links">
+    <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09" class="link-btn" target="_blank">Twitter</a>
+    <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt" class="link-btn" target="_blank">Instagram</a>
+    <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL" class="link-btn" target="_blank">Facebook</a>
+    <a href="https://wa.me/message/7U4T2N47JMNOL1" class="link-btn" target="_blank">WhatsApp</a>
+    <a href="mailto:thevictorogbeide@gmail.com" class="link-btn">Email Me</a>
+  </div>
+
+  <footer>
+    &copy; 2025 Victor Ogbeide. All rights reserved.
+  </footer>
+
+  <!-- 🎯 JavaScript for Polygon Animation -->
+  <script>
+    const canvas = document.getElementById("bg");
+    const ctx = canvas.getContext("2d");
+
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+
+    class Polygon {
+      constructor() {
+        this.reset();
+      }
+
+      reset() {
+        this.x = Math.random() * canvas.width;
+        this.y = Math.random() * canvas.height;
+        this.size = Math.random() * 40 + 20;
+        this.speed = Math.random() * 0.5 + 0.2;
+        this.sides = Math.floor(Math.random() * 3 + 3); // triangle to pentagon
+        this.angle = Math.random() * Math.PI * 2;
+      }
+
+      draw() {
+        ctx.beginPath();
+        for (let i = 0; i < this.sides; i++) {
+          let theta = this.angle + (i * 2 * Math.PI) / this.sides;
+          let x = this.x + this.size * Math.cos(theta);
+          let y = this.y + this.size * Math.sin(theta);
+          if (i === 0) ctx.moveTo(x, y);
+          else ctx.lineTo(x, y);
+        }
+        ctx.closePath();
+        ctx.strokeStyle = "rgba(255, 215, 0, 0.2)";
+        ctx.lineWidth = 1;
+        ctx.stroke();
+      }
+
+      update() {
+        this.y -= this.speed;
+        if (this.y + this.size < 0) this.reset();
+        this.draw();
+      }
+    }
+
+    const polygons = [];
+    for (let i = 0; i < 25; i++) {
+      polygons.push(new Polygon());
+    }
+
+    function animate() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      polygons.forEach(p => p.update());
+      requestAnimationFrame(animate);
+    }
+
+    animate();
+  </script>
+</body>
+</html>
